# mc-benchmark

./: .gitignore
LMCS-2006/: differences.txt  properties.txt
NuSMV-2.6-examples/: CMakeLists.txt
NuSMV-2.6-examples/abp/: abp4-flat-p1.smv  abp4-flat-p2.smv  abp4-flat.smv  abp4.smv  abp8-flat-p0.smv  abp8-flat-p1.smv  abp8-flat-p2.smv  abp8.smv
NuSMV-2.6-examples/bmc_tutorial/: bmc_tutorial-flat.smv
NuSMV-2.6-examples/example_cmu/: dme1-flat.smv  dme1.smv
NuSMV-2.6-examples/example_irst/: dme4.aig  dme4.smv
NuSMV-2.6-examples/msi/: msi_wtrans.smv
NuSMV-2.6-examples/pci/: pci.smv
NuSMV-2.6-examples/prod-cons/: prod-cons.smv
NuSMV-2.6-examples/production-cell/: production-cell-flat.smv
NuSMV-2.6-examples/smv-dist/: syncarb10.smv
NuSMV-2.6-examples/tmp/: elevator.smv  elevatort.smv  phils.smv
caishaowei-sat/: 03ba29d5cb38d345357a74a7b5ccd759-20-100-lambda100-49_sat.cnf  0810eb03d022334fdd1d5a6ad4969d47-gss-18-s100.cnf  0855033e761d91ae367e867c5a569f9e-atco_enc1_opt2_10_15.cnf  09d8544494e54bc756438e69567b4ba7-mp1-klieber2017s-0300-034-t12.cnf  0c5d7e7aa3dd6024816078d2bdcfc4e3-Carry_Bits_Fast_8.cnf.cnf  157c7496c04d3fc63565cd7999dc45a5-Carry_Save_Fast_1.cnf.cnf  20840b5020649385e3f8f4965de7a123-hantzsche_wendt_unit_83.cnf  3176c9024f756e99dbee852e5c0aa578-Break_triple_12_30.xml.cnf  43687a48fb119ca61b47c2fc69a71e7d-manthey_single-ordered-initialized-w42-b8.cnf  488b147304549670f31653c932684e2c-sin-mitern28.cnf  49f5d904bb2e762219287d33f5621971-ITC2021_Late_1.xml.cnf  567964f034c8ffa65952897ce4927c6c-ablmulub16x4o.cnf  (+20 more)
hwmcc-appr/: 6s216rb0.aig  (+11 more)
(+5848 files in other folders)
